# danmaku2ass_cpp

./: .gitignore  .travis.yml  AssBuilder.cpp  AssBuilder.h  AssClass.cpp  AssClass.h  AssClass.hpp  CMakeLists.txt  CommentParser.cpp  CommentParser.h  README.md  danmaku2ass.cpp  danmaku2ass.h  danmaku2ass.hpp
include/Danmaku2ASS/: AssBuilder.h  CommentParser.h  danmaku2ass.h
src/: AssBuilder.cpp  CommentParser.cpp  danmaku2ass.cpp  main.c
